Skip to content

Make hyperlinks in plugin's help text openable

For out-of-tree plugins, it might be useful to include some links in the help QLabel, e.g. linking to the homepage, bug tracker, donations, etc.

The help QLabel displays html4 rich text, as seen in the screenshot, but the links don't open when clicked on. (You can right-click on a link and copy the URL, though that's quite obscure and users might not realize that).

vlc3

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information